css/custom.css
header{background-color: white !important;}

.kirbypic{
    width: 400px;
    height: auto;
}

.accordion-button{
    font-weight: 900;
    color: #A0DED1;
    font-size: .7em;
}
.accordion-button:not(.collapsed){
    color: #fff !important
}
.accordion-button.collapsed::after {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
}
.accordion-button::after{
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
}

.bk-description{
    font-weight: 300;
    font-size: 1.1em
}
.bk-item h3{
    font-weight: 700;
    color: #F30090;
    margin-bottom: 1em;
    text-transform: capitalize;
    font-size: 1.5em;
}

.bk-item i{
   padding-left: 5px;
}

.bk-item .badge{
    padding: 6px;
    font-size: 1em;
    font-weight: 300;
    background-color: #e8e9ea;
    color: #000
}

.bk-item{
    border-bottom: 1px solid #ccc;
}

.no-bottom{
    border-bottom: none !important;
}

.mv-school-icon img{
    max-width: 85px;
    height: auto;
}

.ia-service-header{
    font-size: 1.4em;
    color: #fff;
    font-weight: 700;
    text-transform: capitalize;
    padding: 1em;
}

.mv-list{
    font-size: 1.1em;
}
.mv-list li.list-group-item{
    border: none !important;
}

.mv-list i{
    color: #F30090 !important;
    font-weight: 300;
    padding-right: 6px;
}
.mv-dark-p{
    font-size: 1.1em;
    color: #000
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .mv-school-icon{
    display: none;
  }
}

/* Google Maps */
.map-responsive{
    overflow:hidden;
    padding-bottom:56.25%;
    position:relative;
    height:0;
}
.map-responsive iframe{
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
    border-radius: 12px;
}


.ia-teaser{
    font-weight: 500;
    color: var(--primary);
}

/* Make Scrollbar Sexy Again */

::-webkit-scrollbar{
    width: 1.1em;
}
::-webkit-scrollbar-track{
    background-color: #E6E6E6;
    border-top-left-radius: 100vw;
    border-bottom-left-radius: 100vw;
    margin-block: .1em;
}
::-webkit-scrollbar-thumb{
    background-color: #020887;
    border-radius: 100vw;
    border: .1em solid #E6E6E6
}
::-webkit-scrollbar-thumb:hover{
    background-color: #F30090;
}

